project initial setup complete. no meaningful code written yet

--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -5,7 +5,9 @@
     <title></title>
 </head>
 <body>
-suraj jha
-{{awesomeThings[0]}}
+
+{{ msg }}
+<input type="text" class="input-lg" ng-model="news">
+<input type="button" class="btn btn-lg btn-primary" value="Change name" ng-click="changeName()">
 </body>
 </html>
