done with prwlim header and footer

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,12 @@
-
+<!--<div ui-view>-->
+    <!--<a ui-sref="about.main">main</a>-->
+    <!--&lt;!&ndash;<a ui-sref="about.admin">admin</a>&ndash;&gt;-->
+<!--</div>-->
+<div class="row">
+    <div class="col-lg-2">
+        <div ui-view="sidebar"></div>
+    </div>
+    <div class="col-lg-10">
+        <div ui-view="content"></div>
+    </div>
+</div>
