--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,3 +5,5 @@
     <li><a href="#">Singe Day Repititive Event</a></li>
     <li><a href="#">Multiple Day Repititive Event</a></li>
 </ul>
+
+        {{counter}}
