--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+
 
 {{ msg }}
 <input type="text" class="input-lg" ng-model="news">
 <input type="button" class="btn btn-lg btn-primary" value="Change name" ng-click="changeName()">
+        {{ newCounter}}
 
-</body>
-</html>
