--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -3,5 +3,6 @@
 {{ msg }}
 <input type="text" class="input-lg" ng-model="news">
 <input type="button" class="btn btn-lg btn-primary" value="Change name" ng-click="changeName()">
-        {{ newCounter}}
+        {{ counter}}
+        {{ counter }}
 
