--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,12 @@
-<div class="col-lg-3"></div>
-<ul class="nav nav-pills nav-justified">
-    <li class="active"><a href="#">Singe Day Event</a></li>
-    <li><a href="#">Multiple Day Event</a></li>
-    <li><a href="#">Singe Day Repititive Event</a></li>
-    <li><a href="#">Multiple Day Repititive Event</a></li>
-</ul>
+<!--<div class="col-lg-3"></div>-->
+<!--<ul class="nav nav-pills nav-justified">-->
+    <!--<li class="active"><a href="#">Singe Day Event</a></li>-->
+    <!--<li><a href="#">Multiple Day Event</a></li>-->
+    <!--<li><a href="#">Singe Day Repititive Event</a></li>-->
+    <!--<li><a href="#">Multiple Day Repititive Event</a></li>-->
+<!--</ul>-->
 
-        {{counter}}
+        <!--{{counter}}-->
+<!-- This is the main page which any user will
+    see with a list of upcoming events etc....
+    This is the landing partial page for all users....... -->
