--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -1,7 +1,7 @@
 @import url('../../bower_components/bootstrap/dist/css/bootstrap.css');
 .mypageheader{
     height: 70px;
-    background: #F44141;
+    background:#336699 ;
 }
 
 .navbar-default .mybrand{
@@ -22,6 +22,12 @@
 }
 
 .mycontent{
-    margin-top: 7%;
-    margin-left: 2%;
+    margin-top: 1.5%;
+    /*margin-left: 0%;*/
+}
+
+.admin-sidebar {
+    background-color:#E1EAB1 ;
+    height: auto;
+    position: relative;
 }
