--- a/app/views/partials/adminSidebar.html
+++ b/app/views/partials/adminSidebar.html
@@ -2,22 +2,24 @@
 <div class="row">
 
 
-            <div id="sidebar" class="admin-sidebar">
+            <!--<div id="sidebar" class="admin-sidebar">-->
 
-                    <h3>Sidebar (fixed)</h3>
-                    <ul class="nav nav-pills nav-stacked">
-                        <li><a href="#">Section</a></li>
-                        <li><a href="#">Section</a></li>
-                        <li><a href="#">Section</a></li>
-                        <li><a href="#">Section</a></li>
-                        <li><a href="#">Section</a></li>
-                        <li><a href="#">Section</a></li>
-                        <li><a href="#">Section</a></li>
-                        <li><a href="#">Section</a></li>
-                        <li><a href="#">Section</a></li>
-                        <li><a href="#">Section</a></li>
-                    </ul>
+                    <!--<h3>Sidebar (fixed)</h3>-->
+                    <!--<ul class="nav nav-pills nav-stacked">-->
+                        <!--<li><a href="#">Section</a></li>-->
+                        <!--<li><a href="#">Section</a></li>-->
+                        <!--<li><a href="#">Section</a></li>-->
+                        <!--<li><a href="#">Section</a></li>-->
+                        <!--<li><a href="#">Section</a></li>-->
+                        <!--<li><a href="#">Section</a></li>-->
+                        <!--<li><a href="#">Section</a></li>-->
+                        <!--<li><a href="#">Section</a></li>-->
+                        <!--<li><a href="#">Section</a></li>-->
+                        <!--<li><a href="#">Section</a></li>-->
+                    <!--</ul>-->
 
-            </div>
+            <!--</div>-->
+
+    <input style="margin-left: 100px;" type="daterange" ng-model="myDateRange"/>
 
 </div>
