form without datepicker

--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -7,6 +7,10 @@
         <ng-include src=" '/views/partials/adminSidebar.html' "></ng-include>
     </div>
     <div class="col-lg-10">
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
         <div ui-view></div>
+        </div>
+        </div>
     </div>
 </div>
