--- a/app/views/partials/adminSidebar.html
+++ b/app/views/partials/adminSidebar.html
@@ -1,25 +1,64 @@
 <!--<a ui-sref="admin.add">Add</a>-->
-<div class="row">
 
+        <!--<div class="row">-->
+            <!--<div class="col-md-12 col-sm-12 col-lg-12">-->
+                <!--<div class="sidebar-nav-fixed affix admin-sidebar">-->
+                    <!--<div class="well">-->
+                        <!--<ul class="nav ">-->
+                            <!--<li class="nav-header">Sidebar</li>-->
+                            <!--<li class="active"><a href="#">Link</a>-->
+                            <!--</li>-->
+                            <!--<li><a href="#">Link</a>-->
+                            <!--</li>-->
+                            <!--<li><a href="#">Link</a>-->
+                            <!--</li>-->
+                            <!--<li><a href="#">Link</a>-->
+                            <!--</li>-->
 
-            <!--<div id="sidebar" class="admin-sidebar">-->
-
-                    <!--<h3>Sidebar (fixed)</h3>-->
-                    <!--<ul class="nav nav-pills nav-stacked">-->
-                        <!--<li><a href="#">Section</a></li>-->
-                        <!--<li><a href="#">Section</a></li>-->
-                        <!--<li><a href="#">Section</a></li>-->
-                        <!--<li><a href="#">Section</a></li>-->
-                        <!--<li><a href="#">Section</a></li>-->
-                        <!--<li><a href="#">Section</a></li>-->
-                        <!--<li><a href="#">Section</a></li>-->
-                        <!--<li><a href="#">Section</a></li>-->
-                        <!--<li><a href="#">Section</a></li>-->
-                        <!--<li><a href="#">Section</a></li>-->
-                    <!--</ul>-->
-
+                        <!--</ul>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash;/.well &ndash;&gt;-->
+                <!--</div>-->
+                <!--&lt;!&ndash;/sidebar-nav-fixed &ndash;&gt;-->
             <!--</div>-->
+        <!--</div>-->
 
-    <input style="margin-left: 100px;" type="daterange" ng-model="myDateRange"/>
 
+<div id="wrapper">
+<!-- Sidebar -->
+<div id="sidebar-wrapper">
+    <ul class="sidebar-nav">
+        <li class="sidebar-brand">
+            <a href="#">
+                Sidebar Options
+            </a>
+        </li>
+        <li>
+            <a ui-sref="admin.add">Add New Event</a>
+        </li>
+        <li>
+            <a href="#">Shortcuts</a>
+        </li>
+        <li>
+            <a href="#">Overview</a>
+        </li>
+        <li>
+            <a href="#">Events</a>
+        </li>
+        <li>
+            <a href="#">About</a>
+        </li>
+        <li>
+            <a href="#">Services</a>
+        </li>
+        <li>
+            <a href="#">Contact</a>
+        </li>
+    </ul>
 </div>
+<!-- /#sidebar-wrapper -->
+</div>
+        <!--/#wrapper-->
+
+
+
