ADDED THE PRELIMINARY SQL FILE AND DONE WITH KARMA SETUP

--- a/app/views/partials/adminAddEvent.html
+++ b/app/views/partials/adminAddEvent.html
@@ -141,7 +141,7 @@
             </form>
 
             <div ng-controller="MyCtrl">
-
+headers: {'Content-Type': file.type},
 
                 <!--<button ng-file-select ng-model="myFiles" ng-multiple="true"  accept="image/*,*.pdf,*.xml" resetOnClick="true">Upload</button>-->
 
