--- a/app/views/partials/adminAddEvent.html
+++ b/app/views/partials/adminAddEvent.html
@@ -11,7 +11,7 @@
                             <div class="form-group">
                                 <label for="event_name" class="col-md-4 control-label">Event Name:</label>
                                 <div class="col-md-8">
-                                    <input type="text" name="event_name" class="form-control" id="event_name" placeholder="Event Name">
+                                    <input type="text" name="event_name" class="form-control" id="event_name" placeholder="Event Name" ng-model="formData.event_name">
                                 </div>
                             </div>
                         </div>
@@ -19,7 +19,7 @@
                             <div class="form-group">
                                 <label for="event_category" class="col-md-4 control-label">Event Category:</label>
                                 <div class="col-md-8">
-                                    <select class="form-control" id="event_category" name="event_category">
+                                    <select class="form-control" id="event_category" name="event_category" ng-model="formData.event_category">
                                         <option value="one">one</option>
                                         <option value="two">Two</option>
                                         <option value="three">Three</option>
@@ -33,7 +33,7 @@
                             <div class="form-group">
                                 <label for="event_cost" class="col-md-4 control-label">Cost:</label>
                                 <div class="col-md-8">
-                                    <input type="text" class="form-control" id="event_cost" placeholder="Minimum Cost">
+                                    <input type="text" class="form-control" id="event_cost" placeholder="Minimum Cost" ng-model="formData.event_cost">
                                 </div>
                             </div>
                         </div>
@@ -43,7 +43,7 @@
                             <div class="form-group">
                                 <label for="event_overview" class="col-md-4 control-label">Event Overview:</label>
                                 <div class="col-md-8">
-                                    <textarea style="resize: none;" class="form-control" rows="6" id="event_overview"></textarea>
+                                    <textarea style="resize: none;" class="form-control" rows="6" id="event_overview" ng-model="formData.event_overview"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -56,19 +56,19 @@
                     <div class="col-lg-3" style="margin-left: 4%">
                         <div class="input-group">
                             <span class="input-group-addon">#</span>
-                            <input type="text" class="form-control" id="hash1" >
+                            <input type="text" class="form-control" id="hash1" ng-model="formData.hash1">
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="input-group">
                             <span class="input-group-addon">#</span>
-                            <input type="text" class="form-control" id="hash2">
+                            <input type="text" class="form-control" id="hash2" ng-model="formData.hash2">
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="input-group">
                             <span class="input-group-addon">#</span>
-                            <input type="text" class="form-control" id="hash3">
+                            <input type="text" class="form-control" id="hash3" ng-model="formData.hash3">
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                             <div class="form-group">
                                 <label for="venue_name" class="col-md-4 control-label">Venue Name:</label>
                                 <div class="col-md-8">
-                                    <input type="text" name="venue_name" class="form-control" id="venue_name" placeholder="Venue Name">
+                                    <input type="text" name="venue_name" class="form-control" id="venue_name" placeholder="Venue Name" ng-model="formData.venue_name">
                                 </div>
                             </div>
                         </div>
@@ -91,7 +91,7 @@
                             <div class="form-group">
                                 <label for="event_area" class="col-md-4 control-label">Area:</label>
                                 <div class="col-md-8">
-                                    <select class="form-control" id="event_area" name="event_area">
+                                    <select class="form-control" id="event_area" name="event_area" ng-model="formData.event_area">
                                         <option value="one">one</option>
                                         <option value="two">Two</option>
                                         <option value="three">Three</option>
@@ -107,7 +107,7 @@
                             <div class="form-group">
                                 <label for="event_location" class="col-md-4 control-label">Address:</label>
                                 <div class="col-md-8">
-                                    <textarea style="resize: none;" class="form-control" rows="4" id="event_location"></textarea>
+                                    <textarea style="resize: none;" class="form-control" rows="4" id="event_location" ng-model="formData.event_location"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -143,22 +143,24 @@
                 <hr/>
 
                 <div class="row">
-                    <div ng-controller="MyCtrl">
+
                         <div class="col-lg-4">
                             <label for="image1" class="col-md-4 control-label">Image One: </label>
-                            <button class="btn btn-success" ng-file-select ng-model="image1" ng-multiple="false" accept="image/*" id="image1">Attach Image One</button>
+                            <button class="btn btn-success" ng-file-select ng-model="image1" ng-multiple="false" accept="image/*" id="image1" ng-model="formData.image1">Attach Image One</button>
                         </div>
                         <div class="col-lg-4">
                             <label for="image2" class="col-md-4 control-label">Image Two: </label>
-                            <button class="btn btn-success" ng-file-select ng-model="image2" ng-multiple="false" accept="image/*" id="image2">Attach Image Two</button>
+                            <button class="btn btn-success" ng-file-select ng-model="image2" ng-multiple="false" accept="image/*" id="image2" ng-model="formData.image1">Attach Image Two</button>
                         </div>
                         <div class="col-lg-4">
                             <label for="image3" class="col-md-4 control-label">Image Three: </label>
-                            <button class="btn btn-success" ng-file-select ng-model="image3" ng-multiple="false" accept="image/*" id="image3">Attach Image Three</button>
+                            <button class="btn btn-success" ng-file-select ng-model="image3" ng-multiple="false" accept="image/*" id="image3" ng-model="formData.image1">Attach Image Three</button>
                         </div>
                     </div>
-                </div>
+                <button type="submit" ng-click="submitEventForm()"> Dabao mujhe</button>
             </form>
+
+
 
 
 
