added image upload successfully

--- a/app/views/partials/adminAddEvent.html
+++ b/app/views/partials/adminAddEvent.html
@@ -11,7 +11,10 @@
                             <div class="form-group">
                                 <label for="event_name" class="col-md-4 control-label">Event Name:</label>
                                 <div class="col-md-8">
-                                    <input type="text" name="event_name" class="form-control" id="event_name" placeholder="Event Name" ng-model="formData.event_name">
+                                    <input type="text" name="event_name" ng-minlength="4" ng-maxlength="8" class="form-control" id="event_name" placeholder="Event Name" ng-model="formData.event_name" ng-model-options="{ updateOn: 'blur' }"  required>
+                                    <div ng-show="eventForm.event_name.$invalid && !eventForm.event_name.$pristine && eventForm.event_name.$error.required">Field is required</div>
+                                    <div ng-show="eventForm.event_name.$invalid && eventForm.event_name.$dirty && eventForm.event_name.$error.minlength">too low</div>
+                                    <div ng-show="eventForm.event_name.$invalid && eventForm.event_name.$dirty && eventForm.event_name.$error.maxlength">too high</div>
                                 </div>
                             </div>
                         </div>
@@ -162,7 +165,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4"></div>
-                    <div class="col-lg-3"><button type='submit' class="btn btn-primary" ng-click="submitEventForm()" style="width: 100%">Submit</button>
+                    <div class="col-lg-3"><button type='submit' class="btn btn-primary" ng-disabled="eventForm.$invalid" ng-click="submitEventForm()" style="width: 100%">Submit</button>
 
                     </div>
                 </div>
