added image upload successfully

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -160,7 +160,9 @@ html,body {
 .venue-heading {
     margin-top: 4%;
 }
-.hasclass {
+/* error messages for form elements */
+.error-message {
     color: red;
-
+    padding-top: 2px;
+    font-size: 14px;
 }
