--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -166,3 +166,18 @@ html,body {
     padding-top: 2px;
     font-size: 14px;
 }
+
+input[type="checkbox"] {
+    margin-top: 3%;
+    -ms-transform: scale(1.5); /* IE */
+    -moz-transform: scale(1.5); /* FF */
+    -webkit-transform: scale(1.5); /* Safari and Chrome */
+    -o-transform: scale(1.5); /* Opera */
+}
+
+input[type="radio"] {
+    -ms-transform: scale(1.2); /* IE */
+    -moz-transform: scale(1.2); /* FF */
+    -webkit-transform: scale(1.2); /* Safari and Chrome */
+    -o-transform: scale(1.2); /* Opera */
+}
