--- a/app/views/partials/adminAddEvent.html
+++ b/app/views/partials/adminAddEvent.html
@@ -118,6 +118,66 @@
                 </div>
                 <h2 class="schedule_heading">Event Schedule</h2>
                 <hr/>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="form-group">
+                            <label for="repeat_event" class="col-md-6 control-label">Do you want to repeat the event (Weekly/Monthly) ?</label>
+                            <div class="col-md-4">
+                                <input type="checkbox" name="repeat_event" id="repeat_event" ng-model="formData.checkbox">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row" ng-show="formData.checkbox">
+                    <div class="col-lg-12 form-group">
+                        <div class="col-lg-2"></div>
+                        <div class="col-lg-5">
+                            <div class="row">
+                                <div class="col-lg-5">
+                                    <div class="radio">
+                                        <label>
+                                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="weekly" ng-model="checkbox" checked>
+                                            Weekly {{week_checkbox}}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-lg-7">
+                                    <select class="form-control" id="no_of_weeks" name="no_of_weeks" ng-model="formData.no_of_weeks" ng-show="checkbox == 'weekly'">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5">
+                            <div class="row">
+                                <div class="col-lg-5">
+                                    <div class="radio">
+                                        <label>
+                                            <input type="radio" name="optionsRadios" id="optionsRadios2" value="monthly" ng-model="checkbox">
+                                            Monthly
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-lg-7">
+                                    <select class="form-control" id="no_of_months" name="no_of_months" ng-model="formData.no_of_months" ng-show="checkbox == 'monthly'">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
 
                 <div class="row">
                     <div class="form-group">
