--- a/app/views/partials/adminSidebar.html
+++ b/app/views/partials/adminSidebar.html
@@ -37,7 +37,7 @@
             <a ui-sref="admin.add">Add New Event</a>
         </li>
         <li>
-            <a href="#">Shortcuts</a>
+            <a ui-sref="admin.view">View All Events</a>
         </li>
         <li>
             <a href="#">Overview</a>
