--- a/app/views/partials/adminViewEvent.html
+++ b/app/views/partials/adminViewEvent.html
@@ -1,2 +1,10 @@
-admin view
+<div style="margin-left: 45%;" class="" ng-hide="loaded"><img src="../app/images/713.GIF" alt=""/></div>
+
+<div>
+    <ul>
+        <li ng-repeat="person in people">
+            {{person.fname}}
+        </li>
+    </ul>
+</div>
 
