added the image url insertion into database feature

--- a/app/views/partials/adminViewEvent.html
+++ b/app/views/partials/adminViewEvent.html
@@ -3,10 +3,11 @@
         <div class="container-fluid">
         {{eventData[0]['event_detail_id']}}
 
-           <div style="height: 200px;width: 200px;position: absolute;"><img src="{{imageUrl}}" alt=""/></div>
+
         </div>
     </div>
 </div>
 <!--<section id="map" >-->
     <!--<div ui-map="myMap" ui-options="mapOptions" class="map-canvas"></div>-->
 <!--</section>-->
+<!--<div style="height: 200px;width: 200px;position: absolute;"><img src="{{imageUrl}}" alt=""/></div>-->
