added the image url insertion into database feature

--- a/app/views/partials/adminViewEvent.html
+++ b/app/views/partials/adminViewEvent.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 </div>
-<!--<section id="map" >-->
-    <!--<div ui-map="myMap" ui-options="mapOptions" class="map-canvas"></div>-->
-<!--</section>-->
-<!--<div style="height: 200px;width: 200px;position: absolute;"><img src="{{imageUrl}}" alt=""/></div>-->
+<section id="map" >
+    <div ui-map="myMap" ui-options="mapOptions" class="map-canvas"></div>
+</section>
+<div style="height: 200px;width: 200px;position: absolute;"><img src="{{imageUrl}}" alt=""/></div>
